--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,13 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
         
         - name: set up python env
-          uses: actions/setup-python@4
+          uses: actions/setup-python@v5
           with:
-            python-version: '3.14'
+            python-version: '3.13'
+            cache: 'pip' # caching pip dependencies
 
         - name: install dependencies
           run: |
