--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
         - name: install dependencies
           run: |
-            python3 -m pip install --upgrage pip
+            python3 -m pip install --upgrade pip
             pip install -r requirements.txt
 
         - name: format code
