update repo with setuptools to build package

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ black @ git+https://github.com/psf/black@96ca1b6be3e543618dbcf791d1c143e7119cb13
 click==8.1.7
 flake8==7.1.1
 iniconfig==2.0.0
+lzss @ git+https://github.com/cpprian/lzss/lzss
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.2
@@ -11,3 +12,4 @@ pluggy==1.5.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
 pytest==8.3.4
+setuptools==75.6.0
