--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
           run: black .
 
         - name: lint code
-          run: flake8 encode/ decode/ tests/
+          run: flake8 .
+
+        
 
         - name: run tests
           run: pytest
