--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ black @ git+https://github.com/psf/black@96ca1b6be3e543618dbcf791d1c143e7119cb13
 click==8.1.7
 flake8==7.1.1
 iniconfig==2.0.0
-lzss @ git+https://github.com/cpprian/lzss/lzss
+lzss @ git+https://github.com/cpprian/lzss/tree/main/lzss
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.2
