--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+bitarray==3.0.0
 black @ git+https://github.com/psf/black@96ca1b6be3e543618dbcf791d1c143e7119cb139
 click==8.1.7
 flake8==7.1.1
 iniconfig==2.0.0
-# source git+https://github.com/cpprian/lzss/
-lzss @ git+https://github.com/cpprian/lzss/
+llvmlite==0.43.0
+lzss @ git+https://github.com/cpprian/lzss
 mccabe==0.7.0
 mypy-extensions==1.0.0
+numpy==2.0.2
 packaging==24.2
 pathspec==0.12.1
+pillow==11.0.0
 platformdirs==4.3.6
 pluggy==1.5.0
 pycodestyle==2.12.1
