--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ black @ git+https://github.com/psf/black@96ca1b6be3e543618dbcf791d1c143e7119cb13
 click==8.1.7
 flake8==7.1.1
 iniconfig==2.0.0
-lzss @ git+https://github.com/cpprian/lzss
+llvmlite==0.43.0
+lzss @ file:///Users/cyprian/repo/lzss
 mccabe==0.7.0
 mypy-extensions==1.0.0
+numba==0.60.0
 numpy==2.0.2
+opencv-python==4.10.0.84
 packaging==24.2
 pathspec==0.12.1
 pillow==11.0.0
